<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

<!--    #name-->
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/nameLabelText"
        android:textSize="9pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/nameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameLabel"
        app:layout_constraintTop_toTopOf="parent" />

<!--    #surname-->
    <TextView
        android:id="@+id/surnameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/surnameLabelText"
        android:textSize="9pt"
        app:layout_constraintStart_toStartOf="@id/nameLabel"
        app:layout_constraintTop_toBottomOf="@id/nameLabel" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/surnameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/surnameLabel"
        app:layout_constraintTop_toBottomOf="@id/name" />

<!--    #marks-->
    <TextView
        android:id="@+id/marksLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/marksLabelText"
        android:textSize="9pt"
        app:layout_constraintStart_toStartOf="@id/nameLabel"
        app:layout_constraintTop_toBottomOf="@id/surnameLabel" />

    <EditText
        android:id="@+id/marks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/marksHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/marksLabel"
        app:layout_constraintTop_toBottomOf="@id/surname" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#BFBFBF"
        android:text="@string/buttonText"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/marks" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/avrtext"
        android:text="Twoja średnia to:"
        android:visibility="invisible"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/button"/>
</androidx.constraintlayout.widget.ConstraintLayout>